--- a/.github/workflows/generate_rb_report.yml
+++ b/.github/workflows/generate_rb_report.yml
@@ -48,8 +48,10 @@ jobs:
           echo "Appended report for RBs 101-150."
 
       - name: Update GitHub Gist
-        uses: exyte/gist-sync-action@v1
+        uses: exuanbo/actions-deploy-gist@v1
         with:
-          GH_TOKEN: ${{ secrets.GIST_PAT }}
-          GIST_ID: fa22d4721dc053f0b89425097e9bdbfd 
-          FILE_PATH: rb_health_report.tsv
+          token: ${{ secrets.GIST_PAT }}
+          gist_id: fa22d4721dc053f0b89425097e9bdbfd
+          file_path: rb_health_report.tsv
+          file_type: text
+
