--- a/.github/workflows/generate_rb_report.yml
+++ b/.github/workflows/generate_rb_report.yml
@@ -26,25 +26,27 @@ jobs:
       - name: Install Gemini CLI Globally
         run: npm install -g @google/gemini-cli
 
+      # GEMINI.md holds all the context
+      # use default model
       - name: Generate Report - RBs 1-50
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          (cat prompts/rbs/system.md; cat prompts/rbs/batch_1_50.md) | gemini -m gemini-1.5-pro-latest -t 0.2 --no-stream - > rb_health_report.tsv
+          ( cd prompts/rbs/ && gemini -p batch_1_50.md - ) > rb_health_report.tsv
           echo "Generated report for RBs 1-50."
 
       - name: Generate Report - RBs 51-100
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          (cat prompts/rbs/system.md; cat prompts/rbs/batch_51_100.md) | gemini -m gemini-1.5-pro-latest -t 0.2 --no-stream - >> rb_health_report.tsv
+          ( cd prompts/rbs/ && gemini -p batch_51_100.md - ) > rb_health_report.tsv
           echo "Appended report for RBs 51-100."
 
       - name: Generate Report - RBs 101-150
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          (cat prompts/rbs/system.md; cat prompts/rbs/batch_101_150.md) | gemini -m gemini-1.5-pro-latest -t 0.2 --no-stream - >> rb_health_report.tsv
+          ( cd prompts/rbs/ && gemini -p batch_101_150.md - ) > rb_health_report.tsv
           echo "Appended report for RBs 101-150."
 
       - name: Update GitHub Gist
