--- a/.github/workflows/generate_rb_report.yml
+++ b/.github/workflows/generate_rb_report.yml
@@ -37,14 +37,14 @@ jobs:
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          ( cd prompts/rbs/ && echo "For running backs ranked 1 to 50 based on current ADP " | gemini -p generate_matrix.md - ) >> rb_health_report.tsv
+          ( cd prompts/rbs/ && echo "For running backs ranked 1 to 50 based on current ADP " | gemini -p generate_matrix.md -d - ) >> rb_health_report.tsv
           echo "Generated report for RBs 1-50."
 
       - name: Generate Report - RBs 51-100
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          ( cd prompts/rbs/ && echo "For running backs ranked 51 to 100 based on current ADP " | gemini -p generate_matrix.md - ) >> rb_health_report.tsv
+          ( cd prompts/rbs/ && echo "For running backs ranked 51 to 100 based on current ADP " | gemini -p generate_matrix.md -d - ) >> rb_health_report.tsv
           echo "Appended report for RBs 51-100."
 
       - name: Generate Report - RBs 101-150
