Update generate_rb_report.yml - digging into error

--- a/.github/workflows/generate_rb_report.yml
+++ b/.github/workflows/generate_rb_report.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Install Gemini CLI Globally
         run: npm install -g @google/gemini-cli
 
+      # erroring on missing tools
+      - name: Check Gemini Tools
+        run: gemini --version && gemini --help && exit 1
+
       # system.md holds all the context
       # use default model
       - name: Generate Report - Headers
