--- a/.github/workflows/generate_rb_report.yml
+++ b/.github/workflows/generate_rb_report.yml
@@ -46,14 +46,14 @@ jobs:
             j=$(( i + 49 ))
             sleep 2
             echo "`date` Generating report for RBs $i to $j."
-            ( cat prompts/rbs/system.md; echo "---"; echo; echo; echo "For running backs ranked $i to $j based on current ADP"; cat prompts/rbs/generate_matrix.md  ) | gemini --debug | grep -v 'Data collection is disabled.' >> rb_health_report.tsv
+            ( cat prompts/rbs/system.md; echo "---"; echo; echo; echo "For running backs ranked $i to $j based on current ADP"; cat prompts/rbs/generate_matrix.md  ) | gemini | grep -v 'Data collection is disabled.' >> rb_health_report.tsv
             echo "`date` Generated report for RBs $i to $j."
           done
 
       - name: Validate Report File
         run: |
 
-           MINIMUM_LINES=121
+           MINIMUM_LINES=102
            ACTUAL_LINES=$(wc -l < rb_health_report.tsv)
            echo "File contains $ACTUAL_LINES lines. Required minimum is $MINIMUM_LINES."
     
